  * Reload systemd as the name of the .service file has changed.
  * Update policykit-1.install:
    - Private binaries have been moved to /usr/lib/polkit-1.
    - The extension system has been removed.
    - The .pkla files are gone and so is /var/lib/polkit-1.
  * Remove obsolete conffiles and the corresponding (empty) directories on
    upgrades.

 -- Michael Biebl <biebl@debian.org>  Fri, 28 Dec 2012 19:39:27 +0100

policykit-1 (0.105-3) unstable; urgency=low

  * 07_set-XAUTHORITY-environment-variable-if-unset.patch: Set XAUTHORITY
    environment variable to its default value $HOME/.Xauthority if unset.
    Some display managers, like KDM, do not set the XAUTHORITY variable, so
    starting graphical applications via pkexec was broken in those
    environments. (Closes: #671497)

 -- Michael Biebl <biebl@debian.org>  Thu, 20 Dec 2012 18:55:14 +0100

policykit-1 (0.105-2) unstable; urgency=low

  * Change the permissions of /etc/polkit-1/localauthority to 700, this
    directory is not supposed to be readable by everyone.

 -- Michael Biebl <biebl@debian.org>  Mon, 17 Dec 2012 17:02:06 +0100

policykit-1 (0.105-1) unstable; urgency=low

  * New upstream release.
  * debian/watch: Update URL, the tarballs are hosted on freedesktop.org now.
  * Update symbols file for libpolkit-gobject-1-0 and libpolkit-agent-1-0.
  * Update debian/copyright using the machine-readable copyright format 1.0.
  * Bump Standards-Version to 3.9.3.
  * Bump Build-Depends on debhelper to (>= 9).

 -- Michael Biebl <biebl@debian.org>  Tue, 24 Apr 2012 21:06:04 +0200

policykit-1 (0.104-2) unstable; urgency=low

  * debian/control: Add Build-Depends on libglib2.0-doc and libgtk-3-doc for
    proper cross-references in the gtk-doc API documentation.
  * Install systemd service file for polkitd.

 -- Michael Biebl <biebl@debian.org>  Sat, 11 Feb 2012 23:48:29 +0100

policykit-1 (0.104-1) unstable; urgency=low

  * New upstream release.
    - Add support for netgroups. (LP: #724052)